[project]
name = "PdmContext"
version = "0.1.9"
authors = [
  { name="Apostolos Giannoulidis", email="agiannous@csd.auth.gr" },
]
description = "Context is used to provide a better understanding of how changes in data affect anomaly detection task. Essentially, Context represent all availiable data (CD), existing in a time window, and their relationships (CR), where the relationships are extracted using causal discovery algorithms, providing explainable context."
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    'matplotlib>=3.8',
    'networkx>=3.0',
    'numpy>=1.24',
    'pandas>=2.0',
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.urls]
Homepage = "https://github.com/agiannoul/PdMContext"
Issues = "https://github.com/agiannoul/PdMContext/issues"
documentation = "https://pd-m-context.vercel.app/"