[project]
name = "PdmContext"
version = "0.2.1"

authors = [
  { name="Apostolos Giannoulidis", email="agiannous@csd.auth.gr" },
]
description = "Contextualized Anomaly Detection"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    'matplotlib>=3.8',
    'networkx>=3.0',
    'numpy>=1.24',
    'pandas>=2.0',
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.urls]
Homepage = "https://github.com/agiannoul/PdMContext"
Issues = "https://github.com/agiannoul/PdMContext/issues"
documentation = "https://pd-m-context.vercel.app/"